Minor fixes on Swal and Cropper canvas

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,3 @@
-#main {
-	display: flex;
-}
-
 input, select, button {
 	display: block;
 	margin-bottom: 1rem;
